--- a/index/question1.html
+++ b/index/question1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./question1_css.css" />
+    <link rel="stylesheet" href="/css/question1_css.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -35,7 +35,8 @@
     </div>
     <footer>footer 자리</footer>
     <script>
-      // 진행 바 변
+      // 진행 바 변화
+      $(".");
     </script>
   </body>
 </html>
