--- a/index/question3.html
+++ b/index/question3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./question2_css.css" />
+    <link rel="stylesheet" href="/css/question3_css.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -15,17 +15,20 @@
         </div>
       </div>
       <div class="question">
-        <p>변화에 대한 나의 태도는?</p>
+        <p>여행지에 도착했는데 가기로 한 식당이 문을 닫았다..</p>
+
+        <p>이때 나의 선택은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" onclick="location.href='question3.html'">
-          안정적이고 예측 가능한 환경을 선호한다.
+        <button class="answer1" onclick="location.href='question4.html'">
+          미리 준비해둔 plan B로 간다!
         </button>
-        <button class="answer2" onclick="location.href='question3.html'">
-          새로운 도전과 변화를 즐긴다.
+        <button class="answer2" onclick="location.href='question4.html'">
+          그냥 근처에 맛있어보이는 식당으로 들어간다!
         </button>
       </div>
     </div>
     <footer>dd</footer>
   </body>
+  <script></script>
 </html>
