--- a/index/question2.html
+++ b/index/question2.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/css/question2_css.css" />
+    <link rel="stylesheet" href="/css/question_css.css" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <title>2</title>
   </head>
   <body>
-    <header>dd</header>
+    <header>header 자리</header>
     <div class="container">
       <div class="bar">
         <div class="long_bar">
@@ -15,17 +21,32 @@
         </div>
       </div>
       <div class="question">
-        <p>변화에 대한 나의 태도는?</p>
+        <p>갑자기 약속이 취소됐다...</p>
+
+        <p>이 때 나의 기분은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" onclick="location.href='question3.html'">
-          안정적이고 예측 가능한 환경을 선호한다.
+        <button class="answer1" id="N">
+          아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
         </button>
-        <button class="answer2" onclick="location.href='question3.html'">
-          새로운 도전과 변화를 즐긴다.
+        <button class="answer2" id="S">
+          진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
         </button>
       </div>
     </div>
-    <footer>dd</footer>
+    <footer>footer 자리</footer>
+    <script>
+      // 진행 바 변경
+      let num = $("title").text();
+      $(".short_bar").attr("style", "width: calc(100/12*" + num + "%)");
+
+      // 로컬스토리지 저장
+      $("button").click(function () {
+        my_key = $(this).attr("id");
+        console.log(my_key);
+        localStorage.setItem("answer2", my_key);
+        $(location).attr("href", "question3.html");
+      });
+    </script>
   </body>
 </html>
