--- a/HTML/main.html
+++ b/HTML/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>시작 페이지</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,16 +18,7 @@
     <style></style>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Fasthand&family=Pangolin&display=swap");
-      /* .title {
-        font-family: Fasthand;
-        position: absolute;
-        top: 25%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 30px;
-        color: white;
-        text-align: center;
-      } */
+
       .sub {
         font-family: Bagel + Fat + One;
         position: absolute;
@@ -57,7 +48,7 @@
       #startButton {
         font-family: Fasthand;
         position: absolute;
-        top: 60%;
+        top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 25px;
@@ -70,15 +61,10 @@
   <body>
     <div class="poster">
       <img
-        src="/Marvel Fans Are Freaking Out Over the Leaked 'Avengers 4' Title.jpg"
+        src="/marvel_test/Marvel Fans Are Freaking Out Over the Leaked 'Avengers 4' Title.jpg"
         alt="poster"
       />
-      <!-- <div class="title">
-        나와 비슷한 <br />
-        마블 히어로 찾기
-      </div> -->
       <div class="sub">내가 전생에 히어로였다면...?</div>
-
       <div class="start">
         <button id="startButton" type="button" class="btn btn-light">
           시작하기
