:pencil2: Edit css
index.css question.css 수정

--- a/index/index.html
+++ b/index/index.html
@@ -31,7 +31,7 @@
       <!-- <p>
                 설명 글...
             </p> -->
-      <button id="startBtn" class="btn btn-light">시작하기</button>
+      <button id="startBtn" class="btn btn-light" onclick="location.href='./question1.html'">시작하기</button>
     </div>
   </div>
 
