--- a/index/question1.html
+++ b/index/question1.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/question_css.css" />
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <title>1</title>
-    <!-- dd -->
-  </head>
-  <body>
-    <header>header 자리</header>
-    <div class="container">
-      <div class="bar">
-        <div class="long_bar">
-          <div class="short_bar"></div>
-        </div>
-      </div>
-      <div class="question">
-        <p>갑자기 약속이 취소됐다...</p>
+<head>
+  <link rel="stylesheet" href="/css/question.css" />
 
-        <p>이 때 나의 기분은?</p>
-      </div>
-      <div class="answer">
-        <button class="answer1" id="I">
-          아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
-        </button>
-        <button class="answer2" id="E">
-          진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
-        </button>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <title>1</title>
+  <!-- dd -->
+</head>
+
+<body>
+  <header id="header"></header>
+
+  <div id="wrap">
+    <div class="bar">
+      <div class="long_bar">
+        <div class="short_bar"></div>
       </div>
     </div>
-    <footer>footer 자리</footer>
-    <script>
-      // 진행 바 변경
-      let num = $("title").text();
-      $(".short_bar").attr("style", "width: calc(100/12*" + num + "%)");
+    <div class="question">
+      <p>갑자기 약속이 취소됐다...</p>
 
-      // 로컬스토리지 저장
-      $("button").click(function () {
-        my_key = $(this).attr("id");
-        console.log(my_key);
-        localStorage.setItem("answer1", my_key);
-        $(location).attr("href", "question2.html");
-      });
-    </script>
-  </body>
+      <p>이 때 나의 기분은?</p>
+    </div>
+    <div class="answer">
+      <button class="answer1" id="I">
+        아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
+      </button>
+      <button class="answer2" id="E">
+        진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
+      </button>
+    </div>
+
+  </div>
+
+  <footer></footer>
+  <script>
+    // 진행 바 변경
+    let num = $("title").text();
+    $(".short_bar").attr("style", "width: calc(100/12*" + num + "%)");
+
+    // 로컬스토리지 저장
+    $("button").click(function () {
+      my_key = $(this).attr("id");
+      console.log(my_key);
+      localStorage.setItem("answer1", my_key);
+      $(location).attr("href", "question2.html");
+    });
+  </script>
+</body>
+
 </html>
