--- a/static/header.html
+++ b/static/header.html
@@ -3,7 +3,7 @@
 <header>
     <div class="inner">
         <img class="back" onclick="history.back()" src="../image/back.png" alt="뒤로가기">
-        <div class="logo" onclick="location.href='#'">logo</div>
+        <div class="logo" onclick="location.href='../index/index.html'">logo</div>
         <ul class="user">
             <li>LOG IN</li>
             <li>SIGN UP</li>
