--- a/index/question3.html
+++ b/index/question3.html
@@ -10,7 +10,7 @@
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
-    <title>1</title>
+    <title>3</title>
   </head>
   <body>
     <header>header 자리</header>
@@ -45,7 +45,7 @@
         my_key = $(this).attr("id");
         console.log(my_key);
         localStorage.setItem("answer3", my_key);
-        $(location).attr("href", "result.html");
+        $(location).attr("href", "finish.html");
       });
     </script>
   </body>
