--- a/index/question1.html
+++ b/index/question1.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/question_css.css" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -11,10 +12,6 @@
       crossorigin="anonymous"
     ></script>
     <title>1</title>
-<<<<<<< HEAD
-=======
-    <!-- dd -->
->>>>>>> af5c2ff2704ce69ceadcb7b1e03d1242c10e3eae
   </head>
   <body>
     <header>header 자리</header>
