--- a/index/question3.html
+++ b/index/question3.html
@@ -12,7 +12,7 @@
     ></script>
     <!-- header & footer 고정 -->
     <script src="../js/static.js"></script>
-    <title>1</title>
+    <title>3</title>
   </head>
 
   <body>
@@ -50,7 +50,7 @@
         my_key = $(this).attr("id");
         console.log(my_key);
         localStorage.setItem("answer3", my_key);
-        $(location).attr("href", "result.html");
+        $(location).attr("href", "finish.html");
       });
     </script>
   </body>
