--- a/index/finish.html
+++ b/index/finish.html
@@ -36,8 +36,8 @@
       let res_arr = make_arr();
       let user_mbti = MBTI(res_arr);
       let user_char = check_char(user_mbti);
-      sessionStorage.setItem("charValue", user_char);
-      result(user_char);
+      sessionStorage.setItem("charValueFirst", user_char);
+      result();
       console.log(res_arr);
       console.log(user_mbti);
       console.log(user_char);
