--- a/index/question3.html
+++ b/index/question3.html
@@ -30,10 +30,10 @@
         <p>이 때 나의 기분은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="I">
+        <button class="answer1" id="T">
           아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
         </button>
-        <button class="answer2" id="E">
+        <button class="answer2" id="F">
           진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
         </button>
       </div>
