--- a/index/question2.html
+++ b/index/question2.html
@@ -25,16 +25,14 @@
         </div>
       </div>
       <div class="question">
-        <p>갑자기 약속이 취소됐다...</p>
-
-        <p>이 때 나의 기분은?</p>
+        <p>나는 사람들을 만날 때</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="N">
-          아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
+        <button class="answer1" id="I">
+          사람이 너무 많으면 부담스러워.. 일대일이나 소수끼리 만나는 것이 좋다!
         </button>
-        <button class="answer2" id="S">
-          진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
+        <button class="answer2" id="E">
+          사람은 많을수록 재미있지! 다수로 만나는 것이 좋다!
         </button>
       </div>
     </div>
@@ -43,7 +41,7 @@
     <script>
       // 진행 바 변경
       let num = $("title").text();
-      $(".short_bar").attr("style", "width: calc(100/12*" + num + "%)");
+      $(".short_bar").attr("style", "width: calc(100/20*" + num + "%)");
 
       // 로컬스토리지 저장
       $("button").click(function () {
