--- a/index/question1.html
+++ b/index/question1.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/question.css" />
-
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -10,18 +13,21 @@
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
+    <!-- header & footer 고정 -->
+    <script src="../js/static.js"></script>
     <title>1</title>
-    <!-- dd -->
   </head>
 
   <body>
-    <header>header 자리</header>
-    <div class="container">
-      <div class="bar">
-        <div class="long_bar">
-          <div class="short_bar"></div>
-        </div>
-      </div>
+    <header id="header"></header>
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        id="bar"
+        role="progressbar"
+      ></div>
+    </div>
+    <div id="wrap">
       <div class="question">
         <p>갑자기 약속이 취소됐다...</p>
 
@@ -41,7 +47,7 @@
     <script>
       // 진행 바 변경
       let num = $("title").text();
-      $(".short_bar").attr("style", "width: calc(100/20*" + num + "%)");
+      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
       // 로컬스토리지 저장
       $("button").click(function () {
