--- a/index/question9.html
+++ b/index/question9.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/question.css" />
-
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -17,13 +20,14 @@
 
   <body>
     <header id="header"></header>
-
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        id="bar"
+        role="progressbar"
+      ></div>
+    </div>
     <div id="wrap">
-      <div class="bar">
-        <div class="long_bar">
-          <div class="short_bar"></div>
-        </div>
-      </div>
       <div class="question">
         <p>비행기를 탔는데 갑자기 비행기가 흔들린다!</p>
         <p>이 때 당신의 기분은?</p>
@@ -43,7 +47,7 @@
     <script>
       // 진행 바 변경
       let num = $("title").text();
-      $(".short_bar").attr("style", "width: calc(100/20*" + num + "%)");
+      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
       // 로컬스토리지 저장
       $("button").click(function () {
