--- a/index/question10.html
+++ b/index/question10.html
@@ -53,7 +53,7 @@
         my_key = $(this).attr("id");
         console.log(my_key);
         localStorage.setItem("answer10", my_key);
-        $(location).attr("href", "question11.html");
+        $(location).attr("href", "finish.html");
       });
     </script>
   </body>
