--- a/index/finish.html
+++ b/index/finish.html
@@ -37,10 +37,10 @@
       let user_mbti = MBTI(res_arr);
       let user_char = check_char(user_mbti);
       sessionStorage.setItem("charValueFirst", user_char);
-
-      console.log(res_arr);
-      console.log(user_mbti);
-      console.log(user_char);
+      result();
+      console.log("res_arr: ", res_arr);
+      console.log("user_mbti: ", user_mbti);
+      console.log("user_char: ", user_char);
     </script>
   </body>
 </html>
