question-finish 기능 완성

--- a/index/finish.html
+++ b/index/finish.html
@@ -37,7 +37,7 @@
       let user_mbti = MBTI(res_arr);
       let user_char = check_char(user_mbti);
       sessionStorage.setItem("charValueFirst", user_char);
-
+      result();
       console.log(res_arr);
       console.log(user_mbti);
       console.log(user_char);
