--- a/index/question11.html
+++ b/index/question11.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/question.css" />
-    <link
-      rel="stylesheet"
-      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- jQuery 이용 -->
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
@@ -15,11 +13,19 @@
     ></script>
     <!-- header & footer 고정 -->
     <script src="../js/static.js"></script>
+    <!-- boostrap 기능 이용위한 link 및 script 연결 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <title>11</title>
   </head>
 
   <body>
     <header id="header"></header>
+
     <div class="progress">
       <div
         class="progress-bar progress-bar-striped progress-bar-animated"
