feat: finish 데이터 연결

--- a/index/finish.html
+++ b/index/finish.html
@@ -24,7 +24,7 @@
             <img class="bestMatchImg" onclick="onClick('bestMatchImg')" />
           </div>
           <div>
-            <h1>최악의 궁합</h1>
+            <h1>노력이 필요한 궁합</h1>
             <h2 id="worstMatch"></h2>
             <img class="worstMatchImg" onclick="onClick('worstMatchImg')" />
           </div>
