--- a/index/question3.html
+++ b/index/question3.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>마블 성격 유형 테스트</title>
+    <link rel="stylesheet" href="../css/question.css" />
+    <!-- jQuery 이용 -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <!-- header & footer 고정 -->
+    <script src="../js/static.js"></script>
+    <!-- boostrap 기능 이용위한 link 및 script 연결 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/question.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>마블 성격 유형 테스트</title>
-  <link rel="stylesheet" href="../css/question.css" />
-  <!-- jQuery 이용 -->
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-    crossorigin="anonymous"></script>
-  <!-- header & footer 고정 -->
-  <script src="../js/static.js"></script>
-  <!-- boostrap 기능 이용위한 link 및 script 연결 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../css/question.css">
-</head>
+  <body>
+    <header id="header"></header>
 
-<body>
-  <header id="header"></header>
-
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
-  </div>
-
-  <div id="wrap">
-
-    <!-- * 질문 -->
-    <div class="question">
-      <p>나의 친구관계는</p>
-    </div>
-    <div class="answer">
-      <button class="answer1" id="I">
-        많은 사람과 연락하는 것이 힘들어.. 좁고 깊게!
-      </button>
-      <button class="answer2" id="E">
-        새로운 사람 만나는 것이 너무 즐거워! 넓고 얕게!
-      </button>
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        id="bar"
+        role="progressbar"
+      ></div>
     </div>
 
-  </div>
+    <div id="wrap">
+      <!-- * 질문 -->
+      <div class="question">
+        <p>나의 친구관계는</p>
+      </div>
+      <div class="answer">
+        <button class="answer1" id="I">
+          많은 사람과 연락하는 것이 힘들어.. 좁고 깊게!
+        </button>
+        <button class="answer2" id="E">
+          새로운 사람 만나는 것이 너무 즐거워! 넓고 얕게!
+        </button>
+      </div>
+    </div>
 
-  <footer id="footer"></footer>
+    <footer id="footer"></footer>
 
-  <script>
-    // 진행 바 변경
-    let num = $("title").text();
-    $("#bar").attr("style", "width: calc(100/12*" + num + "%)");
+    <script>
+      // 진행 바 변경
+      let num = $("title").text();
+      $("#bar").attr("style", "width: calc(100/12*" + num + "%)");
 
-    // 로컬스토리지 저장
-    $("button").click(function () {
-      my_key = $(this).attr("id");
-      console.log(my_key);
-      localStorage.setItem("answer3", my_key);
-      $(location).attr("href", "question4.html");
-    });
-  </script>
-</body>
-
+      // 로컬스토리지 저장
+      $("button").click(function () {
+        my_key = $(this).attr("id");
+        console.log(my_key);
+        localStorage.setItem("answer3", my_key);
+        $(location).attr("href", "question4.html");
+      });
+    </script>
+  </body>
 </html>
