--- a/index/index.html
+++ b/index/index.html
@@ -14,49 +14,43 @@
   <!-- boostrap 기능 이용위한 link 및 script 연결 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <script src="/js/index.js"></script>
   <header id="header"></header>
 
-  <body>
-    <header id="header"></header>
-
-    <!-- TODO: carousel 이미지 크기 안맞음 & carousel 크기 너무 큼 -->
-    <div id="wrap">
-      <h1 class="test_name">마블 성격 유형 테스트</h1>
-      <div id="carouselControl" class="intro i_left" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../image/poster.jpg" class="d-block w-100" alt="marvel_img1">
-          </div>
-          <div class="carousel-item">
-            <img src="../image/poster2.jpg" class="d-block w-100" alt="marvel_img2">
-          </div>
-          <div class="carousel-item">
-            <img src="../image/poster3.jpg" class="d-block" alt="marvel_img3">
-          </div>
+  <!-- TODO: carousel 이미지 크기 안맞음 & carousel 크기 너무 큼 -->
+  <div id="wrap">
+    <h1 class="test_name">마블 성격 유형 테스트</h1>
+    <div id="carouselControls" class="intro i_left" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../image/poster.jpg" class="h-100" alt="marvel_img1">
+        </div>
+        <div class="carousel-item">
+          <img src="../image/poster2.jpg" class="h-100" alt="marvel_img2">
+        </div>
+        <div class="carousel-item">
+          <img src="../image/poster3.jpg" class="h-100" alt=" marvel_img3">
         </div>
       </div>
-      <div class="intro i_right">
-        <!-- <p>
+    </div>
+    <div class="intro i_right">
+      <!-- <p>
                 설명 글...
             </p> -->
-        <button id="startBtn" class="btn btn-light" onclick="start()">
-          시작하기
-        </button>
-      </div>
+      <button id="startBtn" class="btn btn-light" onclick="start()">
+        시작하기
+      </button>
     </div>
+  </div>
 
-    <footer id="footer"></footer>
+  <footer id="footer"></footer>
 
-    <!-- <script>
+  <!-- <script>
     $('.carousel').carousel({ interval: 1000 });
   </script> -->
-  </body>
+</body>
 
 </html>
