--- a/index/question18.html
+++ b/index/question18.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="/css/question.css" />
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <!-- header & footer 고정 -->
+    <script src="../js/static.js"></script>
+    <title>마블 성격 유형 테스트</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="/css/question.css" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-    crossorigin="anonymous"></script>
-  <!-- header & footer 고정 -->
-  <script src="../js/static.js"></script>
-  <title>마블 성격 유형 테스트</title>
-</head>
-
-<body>
-  <header id="header"></header>
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" id="bar" role="progressbar"></div>
-  </div>
-  <div id="wrap">
-    <div class="question">
-      <p>친구들을 집에 초대하는 나는...</p>
+  <body>
+    <header id="header"></header>
+    <div class="progress">
+      <div
+        class="progress-bar progress-bar-striped progress-bar-animated"
+        id="bar"
+        role="progressbar"
+      ></div>
     </div>
-    <div class="answer">
-      <button class="answer1" id="J">음식이 모자라지는 않을까?</button>
-      <button class="answer2" id="P">부족하면 치킨 시켜야지</button>
+    <div id="wrap">
+      <div class="question">
+        <p>친구들을 집에 초대하는 나는...</p>
+      </div>
+      <div class="answer">
+        <button class="answer1" id="J">음식이 모자라지는 않을까?</button>
+        <button class="answer2" id="P">부족하면 치킨 시켜야지</button>
+      </div>
     </div>
-  </div>
 
-  <footer></footer>
-  <script>
-    // 진행 바 변경
-    let num = $("title").text();
-    $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
+    <footer></footer>
+    <script>
+      // 진행 바 변경
+      num = localStorage.getItem("pagenumber");
+      console.log(num);
+      localStorage.setItem("pagenumber", Number(num) + 1);
+      num = localStorage.getItem("pagenumber");
+      console.log(num);
+      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
-    // 로컬스토리지 저장
-    $("button").click(function () {
-      my_key = $(this).attr("id");
-      console.log(my_key);
-      localStorage.setItem("answer18", my_key);
-      $(location).attr("href", "question19.html");
-    });
-  </script>
-</body>
-
+      // 로컬스토리지 저장
+      $("button").click(function () {
+        my_key = $(this).attr("id");
+        console.log(my_key);
+        localStorage.setItem("answer18", my_key);
+        $(location).attr("href", "question19.html");
+      });
+    </script>
+  </body>
 </html>
