--- a/index/question3.html
+++ b/index/question3.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/css/question.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>마블 성격 유형 테스트</title>
-    <link rel="stylesheet" href="../css/question.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <!-- jQuery 이용 -->
     <script
       src="https://code.jquery.com/jquery-3.7.0.js"
@@ -13,14 +18,7 @@
     ></script>
     <!-- header & footer 고정 -->
     <script src="../js/static.js"></script>
-    <!-- boostrap 기능 이용위한 link 및 script 연결 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/question.css" />
+    <title>마블 성격 유형 테스트</title>
   </head>
 
   <body>
@@ -53,8 +51,12 @@
 
     <script>
       // 진행 바 변경
-      let num = $("title").text();
-      $("#bar").attr("style", "width: calc(100/12*" + num + "%)");
+      num = localStorage.getItem("pagenumber");
+      console.log(num);
+      localStorage.setItem("pagenumber", Number(num) + 1);
+      num = localStorage.getItem("pagenumber");
+      console.log(num);
+      $("#bar").attr("style", "width: calc(100/20*" + num + "%)");
 
       // 로컬스토리지 저장
       $("button").click(function () {
