--- a/etc/prev_index.html
+++ b/etc/prev_index.html
@@ -14,29 +14,46 @@
     <!-- boostrap 기능 이용위한 link 및 script 연결 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-
 </head>
 
 <body>
+    <script src="/js/index.js"></script>
     <header id="header"></header>
 
+    <!-- TODO: carousel 이미지 크기 안맞음 & carousel 크기 너무 큼 -->
     <div id="wrap">
         <h1 class="test_name">마블 성격 유형 테스트</h1>
-        <div class="intro i_left">
-            <img class="poster" src="../image/poster.jpg" alt="poster" />
+        <div id="carouselControls" class="intro i_left" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../image/poster.jpg" class="" alt="marvel_img1">
+                </div>
+                <div class="carousel-item">
+                    <img src="../image/poster2.jpg" class="h-100" alt="marvel_img2">
+                </div>
+                <div class="carousel-item">
+                    <img src="../image/poster3.jpg" class="h-100" alt=" marvel_img3">
+                </div>
+            </div>
         </div>
         <div class="intro i_right">
             <!-- <p>
                 설명 글...
             </p> -->
-            <button id="startBtn" class="btn btn-light" onclick="location.href='./question1.html'">시작하기</button>
+            <button id="startBtn" class="btn btn-light" onclick="start()">
+                시작하기
+            </button>
         </div>
     </div>
 
     <footer id="footer"></footer>
+
+    <!-- <script>
+    $('.carousel').carousel({ interval: 1000 });
+  </script> -->
 </body>
 
 </html>
