--- a/static/header.html
+++ b/static/header.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="../css/header.css">
 
 <header>
+    <div class="logo" onclick="location.href='../index/index.html'">MARVEL</div>
     <div class="inner">
         <img class="back" onclick="history.back()" src="../image/back.png" alt="뒤로가기">
-        <div class="logo" onclick="location.href='../index/index.html'">logo</div>
         <ul class="user">
             <li>LOG IN</li>
             <li>SIGN UP</li>
