questiom 이미지 추가

--- a/index/question1.html
+++ b/index/question1.html
@@ -35,6 +35,7 @@
     <div id="wrap">
       <!-- * 질문 -->
       <div class="question">
+        <img src="/image/question1_img.jpg" class="question_img" alt="" />
         <p>갑자기 약속이 취소됐다...</p>
 
         <p>이 때 나의 기분은?</p>
