--- a/index/question10.html
+++ b/index/question10.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question10_img.jpg" class="question_img" alt="" />
         <p>나는 요리할 때</p>
       </div>
       <div class="answer">
