--- a/index/question11.html
+++ b/index/question11.html
@@ -34,6 +34,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question11_img.jpg" class="question_img" alt="" />
         <p>친구가 스트레스 받는다고 술 마시자고 한다. 이때 나의 대답은?</p>
       </div>
       <div class="answer">
