--- a/index/question13.html
+++ b/index/question13.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question13_img.jpg" class="question_img" alt="" />
         <p>고민상담을 해줄 때 나는...</p>
       </div>
       <div class="answer">
