--- a/index/question14.html
+++ b/index/question14.html
@@ -34,6 +34,7 @@
 
     <div id="wrap">
       <div class="question">
+        <img src="/image/question14_img.jpg" class="question_img" alt="" />
         <p>슬픔을 나누면...?</p>
       </div>
       <div class="answer">
