--- a/index/question15.html
+++ b/index/question15.html
@@ -34,6 +34,7 @@
 
     <div id="wrap">
       <div class="question">
+        <img src="/image/question15_img.jpg" class="question_img" alt="" />
         <p>문제를 해결할 때 나는</p>
       </div>
       <div class="answer">
