--- a/index/question19.html
+++ b/index/question19.html
@@ -33,6 +33,12 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img
+          src="/image/question19_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 300px"
+        />
         <p>시험이 일주일 남은 나는...</p>
       </div>
       <div class="answer">
