--- a/index/question2.html
+++ b/index/question2.html
@@ -36,6 +36,7 @@
     <div id="wrap">
       <!-- * 질문 -->
       <div class="question">
+        <img src="/image/question2_img.jpg" class="question_img" alt="" />
         <p>나는 사람들을 만날 때</p>
       </div>
       <div class="answer">
