--- a/index/question4.html
+++ b/index/question4.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question4_img.jpg" class="question_img" alt="" />
         <p>선생님(교수님)께서 발표할 사람을 찾으신다!</p>
         <p>나는 이 때</p>
       </div>
@@ -41,7 +42,7 @@
           혹시라도 시킬까 조마조마하며 숨어있는다.
         </button>
         <button class="answer2" id="E">
-          '저요!! 제가 하고싶어요!!' 하며 손 든다.
+          '저요!! 제가 하고싶어요!!' 하며 왼 팔을 든다.
         </button>
       </div>
     </div>
