--- a/index/question5.html
+++ b/index/question5.html
@@ -33,6 +33,11 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img
+          src="/image/question5_img.jpg"
+          class="question_img"
+          alt="question5"
+        />
         <p>사람들과 대화할 때 나는</p>
       </div>
       <div class="answer">
