--- a/index/question6.html
+++ b/index/question6.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question6_img.jpg" class="question_img" alt="" />
         <p>출근했는데 직장 상사가 오늘따라 까칠하다..</p>
         <p>이 때 나의 기분은?</p>
       </div>
