--- a/index/question7.html
+++ b/index/question7.html
@@ -33,16 +33,21 @@
     </div>
     <div id="wrap">
       <div class="question">
-        <p>출근했는데 직장 상사가 오늘따라 까칠하다..</p>
+        <img
+          src="/image/question7_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 500px"
+        />
+        <p>과제가 있던 것을 까먹었다 수업은 10분 뒤 시작!</p>
         <p>이 때 나의 기분은?</p>
       </div>
       <div class="answer">
         <button class="answer1" id="N">
-          나 어제 뭐 잘못했나..? 하루종일 조마조마해 한다.
+          나를 모두 앞에 세워 공개처형하시면 어떡하지? 내 학교생활은 끝이야..
+          자퇴는 하기 싫은데.. 엄마 죄송해요..
         </button>
-        <button class="answer2" id="S">
-          기분이 좀 안좋으신가보다~ 하고 만다.
-        </button>
+        <button class="answer2" id="S">아 망했다. 좋은 점수 못받겠네..</button>
       </div>
     </div>
 
