--- a/index/question9.html
+++ b/index/question9.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question9_img.jpg" class="question_img" alt="" />
         <p>비행기를 탔는데 갑자기 비행기가 흔들린다!</p>
         <p>이 때 당신의 기분은?</p>
       </div>
