--- a/index/question12.html
+++ b/index/question12.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question12_img.jpg" class="question_img" alt="" />
         <p>내가 친구에게 오늘 뭐하냐고 물어보는 의도는?</p>
       </div>
       <div class="answer">
