--- a/index/question16.html
+++ b/index/question16.html
@@ -33,6 +33,12 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img
+          src="/image/question16_img.png"
+          class="question_img"
+          alt=""
+          style="width: 200px"
+        />
         <p>자신의 카톡 알림 상태는...?</p>
       </div>
       <div class="answer">
