--- a/index/question17.html
+++ b/index/question17.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question17_img.jpg" class="question_img" alt="" />
         <p>월급을 받은 당신..!</p>
       </div>
       <div class="answer">
