--- a/index/question18.html
+++ b/index/question18.html
@@ -33,6 +33,12 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img
+          src="/image/question18_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 400px"
+        />
         <p>친구들을 집에 초대하는 나는...</p>
       </div>
       <div class="answer">
