--- a/index/question20.html
+++ b/index/question20.html
@@ -33,6 +33,7 @@
     </div>
     <div id="wrap">
       <div class="question">
+        <img src="/image/question20_img.jpg" class="question_img" alt="" />
         <p>연인과 이별을 한 후</p>
       </div>
       <div class="answer">
