--- a/index/question3.html
+++ b/index/question3.html
@@ -36,6 +36,7 @@
     <div id="wrap">
       <!-- * 질문 -->
       <div class="question">
+        <img src="/image/question3_img.jpg" class="question_img" alt="" />
         <p>나의 친구관계는</p>
       </div>
       <div class="answer">
