--- a/index/question8.html
+++ b/index/question8.html
@@ -33,7 +33,11 @@
     </div>
     <div id="wrap">
       <div class="question">
-        <p>도로에서 운전 중인 당신! 갑자기 차가 매너없이 끼어든다.</p>
+        <img src="/image/question8_img.jpg" class="question_img" alt="" />
+        <p>
+          당신의 차고 앞에 어떤 차가 주차해놓아 입구가 막혔다! 차주가 전화도
+          받지 않는다..
+        </p>
         <p>이 때 당신의 기분은?</p>
       </div>
       <div class="answer">
@@ -41,7 +45,7 @@
           저 차를 부숴버릴 대포가 내 차에 있었으면 좋겠다..라고 생각한다.
         </button>
         <button class="answer2" id="S">
-          아오...뭐 저렇게 운전하냐? 화내고 만다.
+          아오...개념없는 사람이네..하고 다른 자리를 찾아본다.
         </button>
       </div>
     </div>
