--- a/index/index.html
+++ b/index/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>마블 성격 유형 테스트</title>
-  <link rel="stylesheet" href="../css/index_re.css" />
+  <link rel="stylesheet" href="../css/index.css" />
   <!-- jQuery 이용 -->
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
@@ -21,8 +21,10 @@
 
 <body>
   <script src="/js/index.js"></script>
+
   <div id="wrap">
     <header id="header"></header>
+
 
     <h1 class="test_name">마블 성격 유형 테스트</h1>
 
