--- a/etc/test3.html
+++ b/etc/test3.html
@@ -1,46 +1,74 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Study</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <style>
-        img {
-            /* height: fit-content; */
-            width: max-content;
-            height: 800px;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../image/poster.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-                <img src="../image/poster2.jpg" class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-                <img src="../image/poster3.jpg" class="d-block w-100" alt="..." />
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    <title>마블 성격 유형 테스트</title>
+    <link rel="stylesheet" href="../etc/test.css" />
+    <!-- jQuery 이용 -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <!-- header & footer 고정 -->
+    <script src="../js/static.js"></script>
+    <!-- boostrap 기능 이용위한 link 및 script 연결 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <script src="/js/index.js"></script>
+    <div id="wrap">
+        <header id="header"></header>
+
+        <h1 class="test_name">마블 성격 유형 테스트</h1>
+
+
+        <div class="intro">
+            <div clsss="i_left">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../image/poster.jpg" class="d-block w-100" alt="..." />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../image/poster2.jpg" class="d-block w-100" alt="..." />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../image/poster4.jpg" class="d-block w-100" alt="..." />
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="i_right">
+                <p>
+                    설명 글입니다. ㅇㅁㅇㅁ;도ㅜ대ㅜㅁㄴㅊ;ㄷ누알
+                    ㅁㅇㅁㄷㅊㄷㅍㅁㅈㄷㅍㄷㅁㄹㄴ
+                    ㄴㄷㅎㄴㄷ
+                </p>
+                <button id="startBtn" class="btn btn-light" onclick="start()">
+                    시작하기
+                </button>
+            </div>
+
+        </div>
+        <footer id="footer"></footer>
+    </div>
+
+
 </body>
 
 </html>
