question 이미지 크기 수정

--- a/index/question12.html
+++ b/index/question12.html
@@ -33,7 +33,12 @@
     </div>
     <div id="wrap">
       <div class="question">
-        <img src="/image/question12_img.jpg" class="question_img" alt="" />
+        <img
+          src="/image/question12_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 450px"
+        />
         <p>내가 친구에게 오늘 뭐하냐고 물어보는 의도는?</p>
       </div>
       <div class="answer">
