--- a/index/question15.html
+++ b/index/question15.html
@@ -34,7 +34,12 @@
 
     <div id="wrap">
       <div class="question">
-        <img src="/image/question15_img.jpg" class="question_img" alt="" />
+        <img
+          src="/image/question15_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 450px"
+        />
         <p>문제를 해결할 때 나는</p>
       </div>
       <div class="answer">
