--- a/index/question14.html
+++ b/index/question14.html
@@ -34,7 +34,12 @@
 
     <div id="wrap">
       <div class="question">
-        <img src="/image/question14_img.jpg" class="question_img" alt="" />
+        <img
+          src="/image/question14_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 500px"
+        />
         <p>슬픔을 나누면...?</p>
       </div>
       <div class="answer">
