feat: finish 크기 수정

--- a/index/finish.html
+++ b/index/finish.html
@@ -24,24 +24,26 @@
           <img class="img" />
         </div>
         <div class="resultContent">
-          <h1 id="heroName">히어로 이름</h1>
-          <h2 id="resultMBTI">mbti 결과</h2>
-          <br />
-          <h2 id="explain">설명</h2>
+          <div id="heroName" style="font-size: 40px">히어로 이름</div>
+          <div id="resultMBTI" style="font-size: 25px">mbti 결과</div>
+          <div id="explain" style="font-size: 25px">설명</div>
+          <br /><br />
           <div class="match">
             <div>
-              <h1>최고의 궁합</h1>
-              <h2 id="bestMatch"></h2>
+              <div style="font-size: 30px">최고의 궁합</div>
+              <div id="bestMatch" style="font-size: 20px"></div>
               <img class="bestMatchImg" onclick="onClick('bestMatchImg')" />
             </div>
             <div>
-              <h1>노력이 필요한 궁합</h1>
-              <h2 id="worstMatch"></h2>
+              <div style="font-size: 30px">노력이 필요한 궁합</div>
+              <div id="worstMatch" style="font-size: 20px"></div>
               <img class="worstMatchImg" onclick="onClick('worstMatchImg')" />
             </div>
           </div>
+          <br />
           <div>
-            <h1>다른 히어로들 mbti가 궁금하다면?</h1>
+            <div>궁합의 MBTI가 궁금하면</div>
+            <div>이미지를 클릭해보세요.</div>
           </div>
           <div>
             <button id="restart" type="button" class="btn btn-outline-dark">
