feat:jms(button 수정)

--- a/index/question3.html
+++ b/index/question3.html
@@ -40,10 +40,10 @@
         <p>나의 친구관계는</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="I">
+        <button type="button" class="btn btn-outline-primary" id="I">
           많은 사람과 연락하는 것이 힘들어.. 좁고 깊게!
         </button>
-        <button class="answer2" id="E">
+        <button type="button" class="btn btn-outline-primary" id="E">
           새로운 사람 만나는 것이 너무 즐거워! 넓고 얕게!
         </button>
       </div>
