feat: 선택지 크기 조정

--- a/index/question14.html
+++ b/index/question14.html
@@ -43,10 +43,12 @@
         <p>슬픔을 나누면...?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="T">
+        <button type="button" class="btn btn-outline-primary" id="T">
           둘이 된다! 왜냐면 슬픈 사람이 두명이 되기에
         </button>
-        <button class="answer2" id="F">반이 된다. 슬픔은 공유해야지!</button>
+        <button type="button" class="btn btn-outline-primary" id="F">
+          반이 된다. 슬픔은 공유해야지!
+        </button>
       </div>
     </div>
 
