--- a/index/question16.html
+++ b/index/question16.html
@@ -42,8 +42,12 @@
         <p>자신의 카톡 알림 상태는...?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="J">읽지 않은 알람이 하나도 없다.</button>
-        <button class="answer2" id="P">읽지 않은 알람이....매우 많다.</button>
+        <button type="button" class="btn btn-outline-primary" id="J">
+          읽지 않은 알람이 하나도 없다.
+        </button>
+        <button type="button" class="btn btn-outline-primary" id="P">
+          읽지 않은 알람이....매우 많다.
+        </button>
       </div>
     </div>
 
