--- a/index/question18.html
+++ b/index/question18.html
@@ -42,8 +42,12 @@
         <p>친구들을 집에 초대하는 나는...</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="J">음식이 모자라지는 않을까?</button>
-        <button class="answer2" id="P">부족하면 치킨 시켜야지</button>
+        <button type="button" class="btn btn-outline-primary" id="J">
+          음식이 모자라지는 않을까?
+        </button>
+        <button type="button" class="btn btn-outline-primary" id="P">
+          부족하면 치킨 시켜야지
+        </button>
       </div>
     </div>
 
