--- a/index/question12.html
+++ b/index/question12.html
@@ -37,8 +37,12 @@
         <p>내가 친구에게 오늘 뭐하냐고 물어보는 의도는?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="T">뭐하는지 궁금해서</button>
-        <button class="answer2" id="F">시간이 되는지 물어보려고</button>
+        <button type="button" class="btn btn-outline-primary" id="T">
+          뭐하는지 궁금해서
+        </button>
+        <button type="button" class="btn btn-outline-primary" id="F">
+          시간이 되는지 물어보려고
+        </button>
       </div>
     </div>
 
