--- a/index/question15.html
+++ b/index/question15.html
@@ -43,8 +43,12 @@
         <p>문제를 해결할 때 나는</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="T">논리적인 해결책을 찾는다</button>
-        <button class="answer2" id="F">다양한 해결책을 모색한다.</button>
+        <button type="button" class="btn btn-outline-primary" id="T">
+          논리적인 해결책을 찾는다
+        </button>
+        <button type="button" class="btn btn-outline-primary" id="F">
+          다양한 해결책을 모색한다.
+        </button>
       </div>
     </div>
 
