--- a/index/question19.html
+++ b/index/question19.html
@@ -42,10 +42,12 @@
         <p>시험이 일주일 남은 나는...</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="J">
+        <button type="button" class="btn btn-outline-primary" id="J">
           계획대로 오늘은 여기까지 공부한다!
         </button>
-        <button class="answer2" id="P">아..다음주 시험이네...</button>
+        <button type="button" class="btn btn-outline-primary" id="P">
+          아..다음주 시험이네...
+        </button>
       </div>
     </div>
 
